force-app/main/default/objects/sked_JA_Post_Process_Config__c/sked_JA_Post_Process_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created as part of HRP-15532</description>
    <label>skedulo JA Post Process Config Setting</label>
</CustomObject>