force-app/main/default/objects/sked_JA_Post_Process_Config__c/fields/sked_Allowed_Maximum_Retries__c.field-meta.xml
<CustomField>
    <fullName>sked_Allowed_Maximum_Retries__c</fullName>
    <label>Allowed Maximum Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>