force-app/main/default/objects/sked_JA_Post_Process_Config__c/fields/sked_Allowed_No_of_Jobs_in_Flex_Queue__c.field-meta.xml
<CustomField>
    <fullName>sked_Allowed_No_of_Jobs_in_Flex_Queue__c</fullName>
    <label>Allowed Number of Jobs in Flex Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>