force-app/main/default/objects/sked_JA_Post_Process_Config__c/fields/sked_Reschedule_Interval_Sec_Flex_Queue__c.field-meta.xml
<CustomField>
    <fullName>sked_Reschedule_Interval_Sec_Flex_Queue__c</fullName>
    <label>Reschedule Interval Second in Flex Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>